@startuml "Livl Reviews"

skinparam roundcorner 10
hide empty methods
hide empty members

class User {
    username
    email
    password
    description
    avatarUrl
    role
    createdOn
}

class Invitation {
    createdOn
    message
    email
}

class Subcription {
    active
    disabledOn
    createdOn
}

class Request {
    createdOn
}

class RequestEvent {
    message
    state
    createdOn
}

class Review {
    note
    title
    message
    createdOn
}

class Condition {
    name
    refundRate
    refundMode
    message
    requirePictures
    requireVideos
    createdOn
}

class Product {
    name
    description
    price
    availableQuantity
    published
    link    
    createdOn
}

class Media {
    caption
    url
}

Invitation "*" -- "1" User : created by

Subcription "*" -- "1" User : follower
Subcription "*" -- "1" User : following

Request "*" -- "1" Product : concern
Request "*" -- "1" User : created by
Request "*" -- "1" User : recipient

RequestEvent "*" -- "1" Request : related request
RequestEvent "*" -- "1" User : created by

Review "*" -- "1" User : created by
Review "0..1" -- "1" Request : review for

Condition "*" -- "1" User : created by

Product "*" -- "1" Condition : test condition
Product "*" -- "1" User : created by

Media "*" -- "1" Product : related to
Media "*" -- "1" Review : related to

@enduml